# bioacoustics-model-zoo

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  hubconf.py  mac_env_all_models.yml  perch_requirements.txt  pyproject.toml  pytest.ini  requirements.txt
bioacoustics_model_zoo/: __init__.py  appdirs.py  birdnet.py  cache.py  google_bird_vocalization_classifier.py  google_separation.py  mixit_separation.py  nighthawk.py  perch.py  perch_v2.py  perch_v2_litert.py  perch_v2_onnx.py  rana_sierrae_cnn.py  tensorflow_wrapper.py  test_google_bird_vocalization_model.py  test_yamnet.py  try_perch.py  utils.py  yamnet.py
bioacoustics_model_zoo/birdset/: birdset.py
bioacoustics_model_zoo/bmz_birdset/: birdset_preprocessing.py  bmz_birdset.py  bmz_birdset_convnext.py  bmz_birdset_efficientnetB1.py
bioacoustics_model_zoo/bmz_birdset/configs/: eval.yaml  train.yaml
bioacoustics_model_zoo/bmz_birdset/configs/callbacks/: cluster.yaml  default.yaml  early_stopping.yaml  model_checkpoint.yaml  model_summary.yaml  progress_bar.yaml  rich_progress_bar.yaml  time_tracking.yaml
bioacoustics_model_zoo/bmz_birdset/configs/datamodule/: HSN.yaml  NBP.yaml  NES.yaml  PER.yaml  POW.yaml  SNE.yaml  SSW.yaml  UHH.yaml  XCL.yaml  XCM.yaml  esc50.yaml
bioacoustics_model_zoo/bmz_birdset/configs/datamodule/inference/: HSN_inf.yaml  NBP_inf.yaml  NES_inf.yaml  PER_inf.yaml  POW_inf.yaml  SNE_inf.yaml  SSW_inf.yaml  UHH_inf.yaml
bioacoustics_model_zoo/bmz_birdset/configs/datamodule/loaders/: default.yaml
bioacoustics_model_zoo/bmz_birdset/configs/datamodule/mapper/: xc_bambird_mapper.yaml
bioacoustics_model_zoo/bmz_birdset/configs/datamodule/transforms/: base_transform.yaml  bird_default.yaml  bird_default_multiclass.yaml  bird_default_multilabel.yaml  eat_default_transforms.yaml  embedding_transform.yaml  esc_default.yaml  inference_default.yaml
bioacoustics_model_zoo/bmz_birdset/configs/datamodule/transforms/decoding/: bird_event_decoder.yaml
bioacoustics_model_zoo/bmz_birdset/configs/datamodule/transforms/feature_extractor/: default_aug.yaml  default_hug.yaml
bioacoustics_model_zoo/bmz_birdset/configs/datamodule/transforms/nocall_sampler/: default.yaml
bioacoustics_model_zoo/bmz_birdset/configs/datamodule/transforms/preprocessing/: dbscale_conversion.yaml  default.yaml  melscale_conversion.yaml  resizer.yaml  spectrogram_conversion.yaml
bioacoustics_model_zoo/bmz_birdset/configs/datamodule/transforms/waveform_augmentations/: default.yaml  (+7 more)
bioacoustics_model_zoo/bmz_birdset/configs/debug/: debug_multiclass.yaml  debug_multiclass_pretrain.yaml  debug_multilabel.yaml  debug_perch.yaml  default.yaml
bioacoustics_model_zoo/bmz_birdset/configs/experiment/local/: DT_example.yaml  LT_example.yaml  LT_example_train.yaml  LT_example_valid.yaml  MT_example.yaml  MT_example_train.yaml  MT_example_valid.yaml
bioacoustics_model_zoo/bmz_birdset/configs/extras/: default.yaml
bioacoustics_model_zoo/bmz_birdset/configs/hydra/: cluster.yaml  default.yaml
bioacoustics_model_zoo/bmz_birdset/configs/logger/: mlflow.yaml  wandb.yaml  wandb_default.yaml  wandb_flow.yaml
bioacoustics_model_zoo/bmz_birdset/configs/module/: multiclass.yaml  multilabel.yaml
bioacoustics_model_zoo/bmz_birdset/configs/module/network/: ast.yaml  birdnet_inference.yaml  convnext.yaml  eat_m_soundnet.yaml  eat_soundnet.yaml  efficientnet.yaml  hubert.yaml  mobilenet.yaml  perch_inference.yaml  perch_logreg.yaml  resnet.yaml  wav2vec2.yaml
bioacoustics_model_zoo/bmz_birdset/configs/paths/: cluster.yaml  cluster_pretrain.yaml  default.yaml
bioacoustics_model_zoo/bmz_birdset/configs/trainer/: default.yaml  multi_gpu.yaml  single_gpu.yaml
bioacoustics_model_zoo/hawkears/: architecture_constructors.py  classes_edited.txt  dev.ipynb  hawkears.py  hawkears_base_config.py  list_checkpoints.py
tests/: test_basic_functionality.py  test_birdnet.py  test_birdset.py  test_cache.py  test_conditional_imports.py  test_hawkears.py  test_mixit.py  test_model_functionality.py  test_perch.py  test_perch_v2.py  test_perch_v2_litert.py  test_rana_sierrae_cnn.py  test_utils.py  test_yamnet.py
(+189 files in other folders)
