[tool.poetry]
name = "bioacoustics-model-zoo"
version = "0.12.1"
description = "Public repository of machine learning models for bioacoustics, with OpenSoundscape integration"
authors = ["sammlapp <sammlapp@gmail.com>"]
readme = "README.md"
include = ["bioacoustics_model_zoo/bmz_birdset/configs/**/*.yaml"]
packages = [{include = "bioacoustics_model_zoo"}]
license = "MIT"
homepage = "https://github.com/kitzeslab/bioacoustics-model-zoo"
repository = "https://github.com/kitzeslab/bioacoustics-model-zoo"
documentation = "https://github.com/kitzeslab/bioacoustics-model-zoo/blob/main/README.md"
keywords = ["bioacoustics", "machine-learning", "audio", "ecology", "birds", "sound-classification", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
opensoundscape = ">=0.11.2"
PyGithub = ">=2.6.1"

# Optional dependencies for specific models
tensorflow = {version = ">=2.13.0", optional = true}
tensorflow-hub = {version = ">=0.14.0", optional = true}
ai-edge-litert = {version = ">=1.0.0,<1.4", optional = true}
torch = {version = ">=1.13.0", optional = true}
torchvision = {version = ">=0.14.0", optional = true}
torchaudio = {version = ">=0.13.0", optional = true}
timm = {version = ">=0.9.0", optional = true}
transformers = {version = ">=4.20.0", optional = true}

[tool.poetry.extras]
tensorflow = ["tensorflow", "tensorflow-hub"]
birdnet = ["ai-edge-litert"]
hawkears = ["torch", "torchvision", "torchaudio", "timm"]
birdset = ["torch", "torchvision", "torchaudio", "transformers"]
pytorch = ["torch", "torchvision", "torchaudio"]
all = ["tensorflow", "tensorflow-hub", "ai-edge-litert", "torch", "torchvision", "torchaudio", "timm", "transformers"]

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.2"
requests-mock = "^1.11.0"
# Include all optional dependencies for development
tensorflow = ">=2.13.0"
tensorflow-hub = ">=0.14.0"
ai-edge-litert = ">=1.0.0,!=1.4.0"
torch = ">=1.13.0"
torchvision = ">=0.14.0"
torchaudio = ">=0.13.0"
timm = ">=0.9.0"
transformers = ">=4.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
